메일 추가 - 아직 오류 있음

--- a/pinkbean.bo/.settings/org.eclipse.wst.common.component
+++ b/pinkbean.bo/.settings/org.eclipse.wst.common.component
@@ -4,12 +4,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <dependent-module deploy-path="/" handle="module:/overlay/prj/pinkbean.core?includes=**/**&amp;excludes=META-INF/MANIFEST.MF">
-            <dependency-type>consumes</dependency-type>
-        </dependent-module>
-        <dependent-module deploy-path="/" handle="module:/overlay/slf/?includes=**/**&amp;excludes=META-INF/MANIFEST.MF">
-            <dependency-type>consumes</dependency-type>
-        </dependent-module>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources-local"/>
         <property name="context-root" value="pinkbean.bo"/>
         <property name="java-output-path" value="/pinkbean.bo/target/classes"/>
     </wb-module>
